# kb-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  collections.example.ron  docker-compose.yml  justfile
.claude/: settings.json
.claude/skills/: UPSTREAM.md
.claude/skills/mdbook-docs/: SKILL.md
.github/workflows/: book.yml
agents/researcher/: README.md
agents/researcher/config/: config.toml.anthropic.example  config.toml.ollama.example  config.toml.openai.example
agents/researcher/workspace/: IDENTITY.md  SOUL.md  collections.ron
agents/researcher/workspace/skills/ddg-web-search/: SKILL.md
book/: book.toml
book/src/: SUMMARY.md  goals.md  introduction.md  roadmap.md
book/src/development/: adding-tools.md  architecture.md  methodology.md
book/src/development/agents/: researcher.md
book/src/landscape/: agentic-design-patterns.md  cq.md  hipocampus.md  hmem.md  mengram.md  mnemex.md  obsidian-web-mcp.md  ori-mnemos.md  overview.md  prism-mcp.md  process.md
book/src/reference/: ron-schema.md  tools.md
book/src/usage/: cli.md  configuration.md  hybrid-search.md  mcp-server.md
crates/kb-cli/: Cargo.toml
crates/kb-cli/src/: main.rs
crates/kb-core/: Cargo.toml
crates/kb-core/src/: config.rs  lib.rs  query.rs  search.rs  types.rs  write.rs
crates/kb-core/tests/: memvid_smoke.rs
crates/kb-mcp-server/: Cargo.toml
crates/kb-mcp-server/src/: main.rs  server.rs
crates/kb-mcp-server/src/tools/: context.rs  digest.rs  documents.rs  export.rs  health.rs  mod.rs  query.rs  reindex.rs  search.rs  sections.rs  write.rs
docs/: ARCHITECTURE.md  DEV.md  GOALS.md  ROADMAP.md
docs/brainstorms/: 2026-03-18-kb-mcp-v2-brainstorm.md  2026-03-20-vault-intelligence-bundle-brainstorm.md  2026-03-21-ori-mnemos-learnings-brainstorm.md
docs/brainstorms/archived/: 2026-03-19-container-researcher-agent-brainstorm.md  2026-03-21-ori-mnemos-learnings-brainstorm.md  2026-03-30-cargo-workspace-split-brainstorm.md
docs/ideas/: bridge-knowledge-and-code.md
docs/plans/: 2026-03-18-feat-kb-mcp-v2-standalone-crate-plan.md  2026-03-18-feat-memvid-core-storage-plan.md  2026-03-19-feat-container-researcher-agent-plan.md  2026-03-19-feat-hybrid-search-plan.md  2026-03-20-feat-vault-intelligence-bundle-plan.md  2026-03-20-fix-vault-intelligence-deferred-p2s-plan.md  2026-03-22-feat-kb-health-vault-diagnostics-plan.md
docs/plans/archived/: 2026-03-18-feat-kb-mcp-v2-standalone-crate-plan.md  2026-03-18-feat-memvid-core-storage-plan.md  2026-03-19-feat-container-researcher-agent-plan.md  2026-03-19-feat-hybrid-search-plan.md  2026-03-20-feat-vault-intelligence-bundle-plan.md  2026-03-20-fix-vault-intelligence-deferred-p2s-plan.md  2026-03-22-feat-kb-health-vault-diagnostics-plan.md  2026-03-30-refactor-cargo-workspace-split-plan.md
docs/solutions/feature-patterns/: vault-intelligence-bundle-learnings.md  vibeship-spark-notable-patterns.md
scripts/: entrypoint.sh  loc-landscape.sh
src/: cli.rs  format.rs  index.rs  main.rs  search.rs  server.rs  store.rs
src/tools/: context.rs  digest.rs  documents.rs  export.rs  health.rs  mod.rs  query.rs  reindex.rs  search.rs  sections.rs  write.rs
templates/: http.web-fetch.hcl  http.web-search.hcl
vault/: index.md
vault/concepts/: cognitive-memory-model.md  retrieval-strategies.md  token-efficiency.md
vault/drafts/: 2026-03-19-hnsw-vector-search-hierarchical-navigable-small-world.md  2026-03-19-mem0-mem0ai-memory-layer-for-llm-applications.md  2026-03-19-mem0-memory-layer-for-llm-applications.md
vault/patterns/: knowledge-keeper.md  obsidian-workflow.md  researcher-agent.md  session-digests.md  shared-memory.md
vault/research/: README.md
vault/tools/: retrieval-landscape.md
