[package]
name = "kb-core"
version.workspace = true
edition.workspace = true
description = "Core library for kb-mcp: types, config, indexing, search, and formatting"
license.workspace = true
repository.workspace = true

[features]
default = []
hybrid = ["memvid-core/vec"]

[dependencies]
anyhow = "1"
blake3 = "1"
chrono = "0.4"
dirs = "6"
memvid-core = { version = "2.0", default-features = false, features = ["lex"] }
regex = "1"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tracing = "0.1"
