[package]
name = "kb-mcp-server"
version.workspace = true
edition.workspace = true
description = "MCP server for markdown knowledge bases"
license.workspace = true
repository.workspace = true

[[bin]]
name = "kb-mcp"
path = "src/main.rs"

[features]
default = []
hybrid = ["kb-core/hybrid"]

[dependencies]
kb-core = { path = "../kb-core" }
anyhow = "1"
chrono = "0.4"
rmcp = { version = "1.1", features = ["server", "transport-io", "schemars"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
