[package]
name = "kb-mcp-server"
version.workspace = true
edition.workspace = true
description = "MCP server for markdown knowledge bases"
license.workspace = true
repository.workspace = true

[[bin]]
name = "kb-mcp"
path = "src/main.rs"

[features]
default = []
hybrid = ["kb-core/hybrid", "dep:memvid-core"]

[dependencies]
kb-core = { path = "../kb-core" }
anyhow = "1"
chrono = "0.4"
memvid-core = { version = "2.0", default-features = false, features = ["lex", "vec"], optional = true }
rmcp = { version = "~1.5", features = ["server", "transport-io", "schemars"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
